# rnaglib

./: .README.md.swp  .gitignore  .readthedocs.yaml  CHANGELOG.md  DATALOG.md  INSTALL.md  LICENSE  README.md  data_build.sh  install_dependencies.sh  pyproject.toml  requirements.txt  requirements_test.txt  setup.py  tutorial.ipynb
.github/workflows/: build.yml  python-publish.yml
RNAGlib/benchmark/: evaluate.py
RNAGlib/config/: build_iso_mat.py  graph_keys.py
RNAGlib/data/examples/: 4nlf.json
RNAGlib/data_loading/: feature_maps.py  get_all_labels.py  graph_index_NR.json  loader.py
RNAGlib/drawing/: drawing.py  rna_draw.py
RNAGlib/examples/: first_example.py  second_example.py
RNAGlib/ged/: rna_ged_nx.py
RNAGlib/kernels/: annotate.py  node_sim.py
RNAGlib/learning/: learn.py  models.py
RNAGlib/models/: vanillaGCN.py
RNAGlib/utils/: graph_io.py  graph_utils.py  graphlet_hash.py  misc.py  rna_ged_nx.py
analysis/: edge_direction.py  edge_types.py  resolution_vs_dots.py
config/: build_iso_mat.py
docs/: README.md  index.html  requirements.txt
docs/source/: .rnaglib.prepare_data.rst.swp  available_tasks.rst  conf.py  data_build.rst  generate_task_plot.py  index.rst  install.rst  modules.rst  quickstart.rst  rna_ref.rst  rnaglib.algorithms.rst  rnaglib.benchmark.rst  rnaglib.config.rst  rnaglib.data.rst  rnaglib.data_loading.rst  rnaglib.dataset_transforms.rst  rnaglib.drawing.rst  rnaglib.examples.rst  rnaglib.ged.rst  rnaglib.kernels.rst  rnaglib.learning.rst  rnaglib.prepare_data.rst  rnaglib.representations.rst  rnaglib.rst  rnaglib.splitters.rst  rnaglib.tasks.rst  rnaglib.transforms.rst  rnaglib.utils.rst  tasks.rst  tuto_2.5d.rst  tuto_compbio.rst  tuto_custom_features.rst  tuto_custom_task.rst  tuto_data.rst  tuto_ml.rst  tuto_tasks.md  tuto_tasks.rst  tuto_transforms.rst  tutorial_ml.rst  what_is.rst
docs/source/_static/: interactive_codebox.html
docs/source/code/: cb.py
docs/source/code_architecture/: dataset.rst  dataset_transforms.rst  overview.rst  reproduce_snippets.ipynb  rna_transforms.rst  task.rst  tuto_transforms.rst
docs/source/code_index/: rnaglib.algorithms.rst  rnaglib.config.rst  rnaglib.dataset.rst  rnaglib.dataset_transforms.rst  rnaglib.drawing.rst  rnaglib.examples.rst  rnaglib.learning.rst  rnaglib.prepare_data.rst  rnaglib.tasks.rst  rnaglib.transforms.rst  rnaglib.utils.rst
docs/source/data_reference/: available_tasks.rst  build_data.rst  rna_ref.rst  what_is.rst
docs/source/pages/: citation.rst  command_line.rst  quickstart.rst
docs/source/tutorials/: tuto_2.5d.rst  tuto_custom_features.rst  tuto_custom_task.rst  tuto_ml.rst  tuto_tasks.md
examples/: 1aju.json  1fmn.json  2du5.json  2ogm.json  2rpk.json  5e3h.json  6lsg.json  intro_tutorial.ipynb
prepare_data/: README.md  annotations.py  chopper.py  clean_graphs.py  describe_datasets.py  dssr_2_graphs.py  filters.py  hash_check.py  interfaces.py  khop_annotate.py  main.py  retrieve_structures.py  slice.py  test.py
prepare_data/tests/: interfaces.py
rnaglib/benchmark/: evaluate.py
rnaglib/config/: __init__.py  build_iso_mat.py  graph_keys.py  ligands.py
rnaglib/data/examples/: 1a9n.json
rnaglib/data_loading/: __init__.py  feature_maps.py  get_all_labels.py  get_statistics.py  graphdataset.py  graphloader.py  loader.py  rna_dataset.py  rna_loader.py  splitting.py  test.py
rnaglib/datasets/: __init__.py  cloud.py  dgl_graph.py  graph.py  rna_dataset.py  rna_loader.py  voxel.py
rnaglib/drawing/: __init__.py  rna_draw.py  rna_layout.py
rnaglib/examples/: first_example.py  rnaglib_first  rnaglib_second  second_example.py  third_example.py
rnaglib/ged/: ged_nx.py  rna_ged_nx.py
rnaglib/kernels/: annotate.py  node_sim.py
rnaglib/learning/: learn.py  learning_utils.py  models.py  task_models.py
rnaglib/prepare_data/: README.md  __init__.py  annotations.py  barnaba_2_graphs.py  chopper.py  describe_datasets.py  dssr_2_graphs.py  filters.py  fr3d_2_graphs.py  hash_check.py  interfaces.py  khop_annotate.py  ligand_list.txt  main.py  retrieve_structures.py
rnaglib/prepare_data/tests/: clean_graphs.py
rnaglib/representations/: __init__.py  graph.py  point_cloud.py  representation.py  rings.py  voxel.py
rnaglib/splitters/: __init__.py  splitters.py  splitting_utils.py
rnaglib/tasks/: IF_gRNAde_model.py  README.md  __init__.py  benchmark_binding_site.py  binding_site.py  inverse_folding.py  ligand_identity.py  model.py  model_experimental.ipynb  task.py
rnaglib/tasks/RBP_Graph/: protein_binding.py
rnaglib/tasks/RBP_Node/: protein_binding_site.py
rnaglib/tasks/RNA_CM/: README.md  demo.py
rnaglib/tasks/RNA_IF/: gRNAde.py  inverse_folding.py
rnaglib/tasks/RNA_Ligand/: README.md  demo.py  ligand_identity.py
rnaglib/tasks/RNA_Site/: benchmark_binding_site.py  benchmark_demo.py  demo.py
rnaglib/tasks/RNA_VS/: demo.py
rnaglib/tasks/depr/: binding_site.py
rnaglib/tasks/experiments/: benchmark_binding_site_model.py
rnaglib/tasks/models/: benchmark_binding_site_model.py  binding_site_model.py  chemical_modification_model.py  gmsm_model.ipynb
rnaglib/tasks/rna_ef/: build_data.py  ligands.py  main.py
rnaglib/tasks/rna_vs/: build_data.py  data.py  demo.py  evaluate.py  ligands.py  model.py  task.py
rnaglib/utils/: __init__.py  feature_maps.py  graph_io.py  graph_utils.py  graphlet_hash.py  misc.py  task_utils.py
src/rnaglib/: __init__.py
src/rnaglib/algorithms/: __init__.py  graph_algos.py  graphlet_hash.py  gvp_algos.py  node_sim.py  rna_ged_nx.py
src/rnaglib/config/: README.md  __init__.py  build_iso_mat.py  feature_encoders.py  generate_modifications_cache.py  graph_keys.py  modifications.py  rna_smiles.txt
tests/: test_data_loading.py  test_features_computer.py  test_prepare_data.py  test_representations.py  test_splitters.py  test_tasks.py  test_transforms.py  test_utils.py
tools/: .onehot.py.swo  .repickle.py.swp  draw_rnas.py  drawing.py  find_non_cano_graphs.py  graph_utils.py  graphlet_hash.py  learning_utils.py  marker_file.py  meta_graph.py  node_sim.py  onehot.py  rna_classes.py  rna_ged_nx.py
(+5293 files in other folders)
