[project]

name = "rnaglib"
readme = "README.md"
version="2.6.24"
authors=[{name="Vincent Mallet", email="vincentx15@gmail.com"}, 
	 {name="Carlos Oliver", email="oliver@biochem.mpg.de"},
	 {name="Jonathan Broadbent", email="jonathan.broadbent@mail.utoronto.ca"},
	 {name="William L. Hamilton", email="wlh@cs.mcgill.ca"},
	 {name="Jérome Waldispuhl", email="jeromew@cs.mcgill.ca"}
	]
keywords = ["RNA", "3D", "graph neural network"]
description = "RNAglib: Tools for learning on the structure of RNA using 2.5D geometric representations"

requires-python = ">=3.7"
license = { text = "MIT License" }

dependencies = [
    "biopython",
    "dill",
    "joblib",
    "loguru",
    "networkx",
    "numpy",
    "pydantic",
    "rdkit",
    "requests",
    "scikit-learn",
    "seaborn",
    "torch",
    "torchdata",
    "tqdm",
    "gemmi",
    "bidict",
]


[project.urls]
"Documentation" = "https://rnaglib.readthedocs.io/en/latest/index.html"
"GitHub" = "https://github.com/cgoliver/rnaglib"

[project.scripts]

rnaglib_first = 'rnaglib.examples.rnaglib_first:main'
rnaglib_second = 'rnaglib.examples.rnaglib_second:main'
rnaglib_third = 'rnaglib.examples.third_example:main'
rnaglib_prepare_data = 'rnaglib.bin.rnaglib_prepare_data:main'
rnaglib_tokenize = 'rnaglib.bin.rnaglib_tokenize:main'
rnaglib_download = 'rnaglib.bin.rnaglib_download:main'
rnaglib_index = 'rnaglib.bin.rnaglib_index:main'


[tool.setuptools.package-data]

rnaglib = ["data_loading/graph_index_NR.json", 
           "config/rna_smiles.txt", 
           "tasks/data/*", 
           "tasks/RNA_Ligand/data/gmsm_dataset.csv",
           "tasks/RNA_IF/data/das_split.pt",
           "tasks/RNA_IF/data/gRNAde_metadata.csv",
           "config/cache/modifications_cache.json"]

[tool.pytest.ini_options]

testpaths = ["tests"]
pythonpath = ["src"]
