[project]

name = "rnaglib"
readme = "README.md"
version="3.3.9"
authors=[{name="Vincent Mallet", email="vincentx15@gmail.com"}, 
	 {name="Carlos Oliver", email="oliver@biochem.mpg.de"},
	 {name="Jonathan Broadbent", email="jonathan.broadbent@mail.utoronto.ca"},
	 {name="William L. Hamilton", email="wlh@cs.mcgill.ca"},
	 {name="Jérome Waldispuhl", email="jeromew@cs.mcgill.ca"}
	]
keywords = ["RNA", "3D", "graph neural network"]
description = "RNAglib: Tools for learning on the structure of RNA using 2.5D geometric representations"

requires-python = ">=3.7"
license = { text = "MIT License" }

dependencies = [
    "biopython",
    "dill",
    "joblib",
    "loguru",
    "networkx",
    "numpy",
    "pydantic",
    "rdkit",
    "requests",
    "scikit-learn",
    "seaborn",
    "torch",
    "torchdata",
    "tqdm",
    "gemmi",
    "bidict",
    "rna-fm",
    "forgi",
    "pulp"
]


[project.urls]
"Documentation" = "https://rnaglib.readthedocs.io/en/latest/index.html"
"GitHub" = "https://github.com/cgoliver/rnaglib"

[project.scripts]

rnaglib_first = 'rnaglib.examples.rnaglib_first:main'
rnaglib_second = 'rnaglib.examples.rnaglib_second:main'
rnaglib_third = 'rnaglib.examples.third_example:main'
rnaglib_prepare_data = 'rnaglib.bin.rnaglib_prepare_data:main'
rnaglib_tokenize = 'rnaglib.bin.rnaglib_tokenize:main'
rnaglib_download = 'rnaglib.bin.rnaglib_download:main'
rnaglib_index = 'rnaglib.bin.rnaglib_index:main'


[tool.setuptools.package-data]

rnaglib = ["data_loading/graph_index_NR.json", 
           "config/rna_smiles.txt", 
           "tasks/data/*", 
           "tasks/RNA_IF/data/das_split.pt",
           "tasks/RNA_IF/data/gRNAde_metadata.csv",
           "config/cache/modifications_cache.json",
           "tasks/RNA_Ligand/data/bp_dict.json",
           "tasks/RNA_Ligand/data/ligands_dict.json"
           ]

[tool.pytest.ini_options]

testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120
show-fixes = true


[tool.ruff.format]
quote-style = "double"  # Same as Black
indent-style = "space"

[tool.ruff.lint]
# Rules - targeting Pylint-like strictness
select = [
    "ALL"
]
ignore = [
    "ANN",  # Type annotations - might be too strict if you're not fully typed
]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-branches = 12
max-statements = 50
max-args = 5
max-locals = 15
